customtests/tests/expected/assignvars1.err
tests/assignvars1.scala:11: error: mutability mismatch:
 found   : AnyRef @readonly(assignvars1.this.r1)
 required: AnyRef(assignvars1.this.u1)
	u1 = r1  // should error
             ^
tests/assignvars1.scala:14: error: mutability mismatch:
 found   : AnyRef @readonly(assignvars1.this.r1)
 required: AnyRef @mutable(assignvars1.this.m1)
	m1 = r1  // should error
             ^
two errors found
